add_subdirectory(Algorithms)
add_subdirectory(Utilities)
add_subdirectory(scripts)

art_make( ### MIGRATE-ACTION-RECOMMENDED: use art_make_library(), art_dictionary(), simple_plugin() with explicit source lists
  EXCLUDE
    "DiscriminatePMTwaveformsByChannel_module.cc"
    "MajorityTriggerSimulation_module.cc"
    "SlidingWindowTrigger_module.cc"
    "SlidingWindowTriggerSimulation_module.cc"
    "TriggerEfficiencyPlots_module.cc"
    "MajorityTriggerEfficiencyPlots_module.cc"
    "SlidingWindowTriggerEfficiencyPlots_module.cc"
    "MakeTriggerSimulationTree_module.cc"
  LIB_LIBRARIES
    icaruscode::PMT_Trigger_Algorithms
    icaruscode::PMT_Trigger_Utilities
    sbnobj_ICARUS_PMT_Trigger_Data
    larcore::Geometry_Geometry_service
    lardataalg::MCDumpers
    larcorealg::Geometry
    lardataobj::RawData
    nusimdata::SimulationBase
    ${ART_ROOT_IO_TFILESERVICE_SERVICE}
    ${ART_ROOT_IO_TFILE_SUPPORT}
    ${ART_FRAMEWORK_SERVICES_REGISTRY}
    ${ART_FRAMEWORK_PRINCIPAL}
    ${ART_FRAMEWORK_CORE}
    ${ART_PERSISTENCY_PROVENANCE}
    ${ART_UTILITIES}
    ${CANVAS}
    ${MF_MESSAGELOGGER}
    ${FHICLCPP}
    ${CETLIB_EXCEPT}
    ROOT::GenVector
    ROOT::Hist
    ROOT::Tree
    ROOT::Core
  MODULE_LIBRARIES
    icaruscode::PMT_Trigger_Algorithms
    sbnobj_ICARUS_PMT_Trigger_Data
    lardataalg::DetectorInfo
    lardataobj::RawData
    ${ART_FRAMEWORK_SERVICES_REGISTRY}
    ${MF_MESSAGELOGGER}
    ${FHICLCPP}
    ROOT::Core
    ROOT::Physics
  TOOL_LIBRARIES
    icaruscode::PMT_Trigger_Algorithms
    sbnobj_ICARUS_PMT_Trigger_Data
    lardataalg::DetectorInfo
    lardataobj::RawData
    ${MF_MESSAGELOGGER}
    ${FHICLCPP}
  )

simple_plugin(DiscriminatePMTwaveformsByChannel module
  icaruscode::PMT_Trigger_Algorithms
  sbnobj_ICARUS_PMT_Trigger_Data
  sbnobj_ICARUS_PMT_Data
  sbnobj_Common_PMT_Data
  icaruscode::PMT_Trigger_Utilities
  icaruscode::PMT_Algorithms
  lardataobj::RawData
  ${ART_FRAMEWORK_SERVICES_REGISTRY}
  ${ART_FRAMEWORK_PRINCIPAL}
  ${ART_FRAMEWORK_CORE}
  ${CANVAS}
  ${MF_MESSAGELOGGER}
  ${FHICLCPP}
  ${CETLIB_EXCEPT}
  ROOT::Core
  )

simple_plugin(SlidingWindowTrigger module
  icaruscode::PMT_Trigger_Algorithms
  sbnobj_ICARUS_PMT_Trigger_Data
  icaruscode::PMT_Trigger_Utilities
  icaruscode::PMT_Algorithms
  larcore::Geometry_Geometry_service
  larcorealg::Geometry
  lardataobj::RawData
  ${ART_FRAMEWORK_SERVICES_REGISTRY}
  ${ART_FRAMEWORK_PRINCIPAL}
  ${ART_FRAMEWORK_CORE}
  ${CANVAS}
  ${MF_MESSAGELOGGER}
  ${FHICLCPP}
  ${CETLIB_EXCEPT}
  ROOT::Core
  )

simple_plugin(MajorityTriggerSimulation module
  icaruscode::PMT_Trigger_Algorithms
  sbnobj_ICARUS_PMT_Trigger_Data
  icaruscode::PMT_Trigger_Utilities
  larcore::Geometry_Geometry_service
  larcorealg::Geometry
  lardataobj::RawData
  ${ART_ROOT_IO_TFILESERVICE_SERVICE}
  ${ART_ROOT_IO_TFILE_SUPPORT}
  ${ART_FRAMEWORK_SERVICES_REGISTRY}
  ${ART_FRAMEWORK_PRINCIPAL}
  ${ART_FRAMEWORK_CORE}
  ${CANVAS}
  ${MF_MESSAGELOGGER}
  ${FHICLCPP}
  ${CETLIB_EXCEPT}
  ROOT::Hist
  ROOT::Core
  )

simple_plugin(SlidingWindowTriggerSimulation module
  icaruscode::PMT_Trigger_Algorithms
  sbnobj_ICARUS_PMT_Trigger_Data
  icaruscode::PMT_Trigger_Utilities
  larcore::Geometry_Geometry_service
  larcorealg::Geometry
  lardataobj::RawData
  ${ART_ROOT_IO_TFILESERVICE_SERVICE}
  ${ART_ROOT_IO_TFILE_SUPPORT}
  ${ART_FRAMEWORK_SERVICES_REGISTRY}
  ${ART_FRAMEWORK_PRINCIPAL}
  ${ART_FRAMEWORK_CORE}
  ${CANVAS}
  ${MF_MESSAGELOGGER}
  ${FHICLCPP}
  ${CETLIB_EXCEPT}
  ROOT::Hist
  ROOT::Core
  )

simple_plugin(TriggerEfficiencyPlots module
  icaruscode::PMT_Trigger_Utilities
  sbnobj_ICARUS_PMT_Trigger_Data
  larcore::Geometry_Geometry_service
  lardataalg::MCDumpers
  larcorealg::Geometry
  lardataobj::RawData
  nusimdata::SimulationBase
  ${ART_ROOT_IO_TFILESERVICE_SERVICE}
  ${ART_ROOT_IO_TFILE_SUPPORT}
  ${ART_FRAMEWORK_SERVICES_REGISTRY}
  ${ART_FRAMEWORK_PRINCIPAL}
  ${ART_FRAMEWORK_CORE}
  ${CANVAS}
  ${MF_MESSAGELOGGER}
  ${FHICLCPP}
  ${CETLIB_EXCEPT}
  ROOT::GenVector
  ROOT::Hist
  ROOT::Tree
  ROOT::Core
  )

simple_plugin(MakeTriggerSimulationTree module
  icaruscode::PMT_Trigger_Algorithms
  icaruscode::PMT_Trigger_Utilities
  sbnobj_ICARUS_PMT_Trigger_Data
  larcore::Geometry_Geometry_service
  lardataalg::MCDumpers
  larcorealg::Geometry
  nusimdata::SimulationBase
  ${ART_ROOT_IO_TFILESERVICE_SERVICE}
  ${ART_ROOT_IO_TFILE_SUPPORT}
  ${ART_FRAMEWORK_SERVICES_REGISTRY}
  ${ART_FRAMEWORK_PRINCIPAL}
  ${ART_FRAMEWORK_CORE}
  ${CANVAS}
  ${MF_MESSAGELOGGER}
  ${FHICLCPP}
  ${CETLIB_EXCEPT}
  ROOT::GenVector
  ROOT::Tree
  ROOT::Core
  )

# trigger efficiency plot modules with the same build configuration:
foreach(TriggerEfficiencyPlotsModule
  MajorityTriggerEfficiencyPlots
  SlidingWindowTriggerEfficiencyPlots
)

  simple_plugin(${TriggerEfficiencyPlotsModule} module
    icaruscode::PMT_Trigger_Algorithms
    icaruscode::PMT_Trigger
    icaruscode::PMT_Trigger_Utilities
    sbnobj_ICARUS_PMT_Trigger_Data
    larcore::Geometry_Geometry_service
    lardataalg::MCDumpers
    larcorealg::Geometry
    lardataobj::RawData
    nusimdata::SimulationBase
    ${ART_ROOT_IO_TFILESERVICE_SERVICE}
    ${ART_ROOT_IO_TFILE_SUPPORT}
    ${ART_FRAMEWORK_SERVICES_REGISTRY}
    ${ART_FRAMEWORK_PRINCIPAL}
    ${ART_FRAMEWORK_CORE}
    ${ART_FRAMEWORK_PRINCIPAL}
    ${CANVAS}
    ${MF_MESSAGELOGGER}
    ${FHICLCPP}
    ${CETLIB_EXCEPT}
    ROOT::GenVector
    ROOT::Hist
    ROOT::Tree
    ROOT::Core
    )

endforeach()

install_headers()
install_source()
install_fhicl()
