add_subdirectory(Algorithms)
add_subdirectory(Utilities)
add_subdirectory(scripts)

art_make(
	EXCLUDE
		"DiscriminatePMTwaveformsByChannel_module.cc"
		"MajorityTriggerSimulation_module.cc"
		"SlidingWindowTrigger_module.cc"
		"SlidingWindowTriggerSimulation_module.cc"
		"TriggerEfficiencyPlots_module.cc"
		"MajorityTriggerEfficiencyPlots_module.cc"
		"SlidingWindowTriggerEfficiencyPlots_module.cc"
		"MakeTriggerSimulationTree_module.cc"
	LIB_LIBRARIES
		icaruscode::PMT_Trigger_Algorithms
		icaruscode::PMT_Trigger_Utilities
		sbnobj::ICARUS_PMT_Trigger_Data
		larcore::Geometry_Geometry_service
		lardataalg::MCDumpers
		larcorealg::Geometry
		lardataobj::RawData
		nusimdata::SimulationBase
		art_root_io::TFileService_service
		art_root_io::tfile_support
		art::Framework_Services_Registry
		art::Framework_Principal
		art::Framework_Core
		art::Persistency_Provenance
		art::Utilities
		canvas::canvas
		messagefacility::MF_MessageLogger
		fhiclcpp::fhiclcpp
		${CETLIB_EXCEPT}
		ROOT::GenVector
		ROOT::Hist
		ROOT::Tree
		ROOT::Core
	MODULE_LIBRARIES
		icaruscode::PMT_Trigger_Algorithms
		sbnobj::ICARUS_PMT_Trigger_Data
		lardataalg::DetectorInfo
		lardataobj::RawData
		art::Framework_Services_Registry
		messagefacility::MF_MessageLogger
		fhiclcpp::fhiclcpp
		ROOT::Core
		ROOT::Physics
		TOOL_LIBRARIES
		icaruscode::PMT_Trigger_Algorithms
		sbnobj::ICARUS_PMT_Trigger_Data
		lardataalg::DetectorInfo
		lardataobj::RawData
		messagefacility::MF_MessageLogger
		fhiclcpp::fhiclcpp
	)

simple_plugin(DiscriminatePMTwaveformsByChannel module
		icaruscode::PMT_Trigger_Algorithms
		sbnobj::ICARUS_PMT_Trigger_Data
		sbnobj::ICARUS_PMT_Data
		sbnobj::Common_PMT_Data
		icaruscode::PMT_Trigger_Utilities
		icaruscode::PMT_Algorithms
		lardataobj::RawData
		art::Framework_Services_Registry
		art::Framework_Principal
		art::Framework_Core
		canvas::canvas
		messagefacility::MF_MessageLogger
		fhiclcpp::fhiclcpp
		${CETLIB_EXCEPT}
		ROOT::Core
		)

simple_plugin(SlidingWindowTrigger module
		icaruscode::PMT_Trigger_Algorithms
		sbnobj::ICARUS_PMT_Trigger_Data
		icaruscode::PMT_Trigger_Utilities
		icaruscode::PMT_Algorithms
		larcore::Geometry_Geometry_service
		larcorealg::Geometry
		lardataobj::RawData
		art::Framework_Services_Registry
		art::Framework_Principal
		art::Framework_Core
		canvas::canvas
		messagefacility::MF_MessageLogger
		fhiclcpp::fhiclcpp
		${CETLIB_EXCEPT}
		ROOT::Core
		)

simple_plugin(MajorityTriggerSimulation module
		icaruscode::PMT_Trigger_Algorithms
		sbnobj::ICARUS_PMT_Trigger_Data
		icaruscode::PMT_Trigger_Utilities
		larcore::Geometry_Geometry_service
		larcorealg::Geometry
		lardataobj::RawData
		art_root_io::TFileService_service
		art_root_io::tfile_support
		art::Framework_Services_Registry
		art::Framework_Principal
		art::Framework_Core
		canvas::canvas
		messagefacility::MF_MessageLogger
		fhiclcpp::fhiclcpp
		${CETLIB_EXCEPT}
		ROOT::Hist
		ROOT::Core
		)

simple_plugin(SlidingWindowTriggerSimulation module
		icaruscode::PMT_Trigger_Algorithms
		sbnobj::ICARUS_PMT_Trigger_Data
		icaruscode::PMT_Trigger_Utilities
		larcore::Geometry_Geometry_service
		larcorealg::Geometry
		lardataobj::RawData
		art_root_io::TFileService_service
		art_root_io::tfile_support
		art::Framework_Services_Registry
		art::Framework_Principal
		art::Framework_Core
		canvas::canvas
		messagefacility::MF_MessageLogger
		fhiclcpp::fhiclcpp
		${CETLIB_EXCEPT}
		ROOT::Hist
		ROOT::Core
		)

simple_plugin(TriggerEfficiencyPlots module
		icaruscode::PMT_Trigger_Utilities
		sbnobj::ICARUS_PMT_Trigger_Data
		larcore::Geometry_Geometry_service
		lardataalg::MCDumpers
		larcorealg::Geometry
		lardataobj::RawData
		nusimdata::SimulationBase
		art_root_io::TFileService_service
		art_root_io::tfile_support
		art::Framework_Services_Registry
		art::Framework_Principal
		art::Framework_Core
		canvas::canvas
		messagefacility::MF_MessageLogger
		fhiclcpp::fhiclcpp
		${CETLIB_EXCEPT}
		ROOT::GenVector
		ROOT::Hist
		ROOT::Tree
		ROOT::Core
		)

simple_plugin(MakeTriggerSimulationTree module
		icaruscode::PMT_Trigger_Algorithms
		icaruscode::PMT_Trigger_Utilities
		sbnobj::ICARUS_PMT_Trigger_Data
		larcore::Geometry_Geometry_service
		lardataalg::MCDumpers
		larcorealg::Geometry
		nusimdata::SimulationBase
		art_root_io::TFileService_service
		art_root_io::tfile_support
		art::Framework_Services_Registry
		art::Framework_Principal
		art::Framework_Core
		canvas::canvas
		messagefacility::MF_MessageLogger
		fhiclcpp::fhiclcpp
		${CETLIB_EXCEPT}
		ROOT::GenVector
		ROOT::Tree
		ROOT::Core
		)

# trigger efficiency plot modules with the same build configuration:
foreach(TriggerEfficiencyPlotsModule
	MajorityTriggerEfficiencyPlots
	SlidingWindowTriggerEfficiencyPlots
	)

	simple_plugin(${TriggerEfficiencyPlotsModule} module
		icaruscode::PMT_Trigger_Algorithms
		icaruscode::PMT_Trigger
		icaruscode::PMT_Trigger_Utilities
		sbnobj::ICARUS_PMT_Trigger_Data
		larcore::Geometry_Geometry_service
		lardataalg::MCDumpers
		larcorealg::Geometry
		lardataobj::RawData
		nusimdata::SimulationBase
		art_root_io::TFileService_service
		art_root_io::tfile_support
		art::Framework_Services_Registry
		art::Framework_Principal
		art::Framework_Core
		art::Framework_Principal
		canvas::canvas
		messagefacility::MF_MessageLogger
		fhiclcpp::fhiclcpp
		${CETLIB_EXCEPT}
		ROOT::GenVector
		ROOT::Hist
		ROOT::Tree
		ROOT::Core
		)

endforeach()

install_headers()
install_source()
install_fhicl()
